--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <tr>
                             <th scope="col">Location</th>
                             <th scope="col">Date</th>
+							<th scope="col">URL</th>
                             <th scope="col">Organiser</th>
                             <th scope="col">Talk</th>
                         </tr>
@@ -42,18 +43,21 @@
 						<tr>
 							<th scope="row">Netherlands</th>
 							<td>August 2016</td>
+							<td></td>
 							<td>TBA</td>
 							<td>TBA</td>
 						</tr>
 						<tr>
 							<th scope="row">Amsterdam, NL</th>
-							<td>Rumour: 8th of October 2016</td>
+							<td>8th of October 2016</td>
+							<td><a href="http://roledrinks.nl">Website</a></td>
 							<td>TBA</td>
 							<td>TBA</td>
 						</tr>
 						<tr>
 							<th scope="row">Hamburg, DE</th>
 							<td>TBA</td>
+							<td><a href="http://roledrinks.de">Website</a></td>
 							<td><a href="https://twitter.com/lassediercks">Lasse Diercks</a></td>
 							<td>TBA</td>
 						</tr>
