add date for hamburg meetup

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     </header>
     <main id="main">
         <h1>#a11y meet-up</h1>
-		
+
 		<p>
 			Interested in accessibility?
 			Want to talk to other interested people?
 			Visit one of the role=drinks meetups :)
 		</p>
-		
-		
+
+
 		<section>
 			<h2>Drinking plans</h2>
-			
+
 			<p>
 				We've had a couple of drinks, err, meetups and want to drink with… damnit, meet more people!
 				If you're interested in attending or setting up a meetup, please <a href="https://twitter.com/MichielBijl">tell Michiel on Twitter</a> or <a href="mailto:roledrinks@agosto.nl">send us an e-mail</a>.
 			</p>
-			
+
             <div class="overflow">
                 <table>
                     <thead>
@@ -56,7 +56,7 @@
 						</tr>
 						<tr>
 							<th scope="row">Hamburg, DE</th>
-							<td>TBA</td>
+							<td>17th of August 2016</td>
 							<td><a href="http://roledrinks.de">Website</a></td>
 							<td><a href="https://twitter.com/lassediercks">Lasse Diercks</a></td>
 							<td>TBA</td>
@@ -72,12 +72,12 @@
 				</table>
 			</div>
 		</section>
-		
+
 		<section>
 			<h2>Vague memories</h2>
-			
+
 			<p>A list of—what we think at least are—previous meet-ups:</p>
-			
+
             <div class="overflow">
                 <table>
                     <thead>
