--- a/index.html
+++ b/index.html
@@ -41,24 +41,31 @@
                     </thead>
                     <tbody>
 						<tr>
-							<th scope="row">Netherlands</th>
-							<td>August 2016</td>
-							<td></td>
-							<td>TBA</td>
-							<td>TBA</td>
-						</tr>
-						<tr>
 							<th scope="row">Amsterdam, NL</th>
 							<td>8th of October 2016</td>
 							<td><a href="http://roledrinks.nl">Website</a></td>
-							<td>TBA</td>
-							<td>TBA</td>
+							<td>Job, Eva, and Michiel</td>
+							<td>4 to 5 talks</td>
 						</tr>
 						<tr>
 							<th scope="row">Hamburg, DE</th>
 							<td>17th of August 2016</td>
 							<td><a href="http://roledrinks.de">Website</a></td>
 							<td><a href="https://twitter.com/lassediercks">Lasse Diercks</a></td>
+							<td>3 to 5 talks</td>
+						</tr>
+						<tr>
+							<th scope="row">Brighton, UK</th>
+							<td>2016</td>
+							<td></td>
+							<td>TBA</td>
+							<td>TBA</td>
+						</tr>
+						<tr>
+							<th scope="row">San Diego, USA</th>
+							<td>2017</td>
+							<td></td>
+							<td>TBA</td>
 							<td>TBA</td>
 						</tr>
 						<!--
