--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 							<td>TBA</td>
 						</tr>
 						<tr>
+							<th scope="row">Edinburgh, UK</th>
+							<td>2016</td>
+							<td></td>
+							<td><a href="https://twitter.com/peterheery">Peter Heery</a></td>
+							<td>TBA</td>
+						</tr>
+						<tr>
 							<th scope="row">San Diego, USA</th>
 							<td>2017</td>
 							<td></td>
