--- a/index.html
+++ b/index.html
@@ -48,13 +48,6 @@
 							<td>4 to 5 talks</td>
 						</tr>
 						<tr>
-							<th scope="row">Hamburg, DE</th>
-							<td>17th of August 2016</td>
-							<td><a href="http://roledrinks.de">Website</a></td>
-							<td><a href="https://twitter.com/lassediercks">Lasse Diercks</a></td>
-							<td>3 to 5 talks</td>
-						</tr>
-						<tr>
 							<th scope="row">Brighton, UK</th>
 							<td>2016</td>
 							<td></td>
@@ -98,14 +91,23 @@
                         <tr>
                             <th scope="col">Location</th>
                             <th scope="col">Date</th>
+							<th scope="cole">Website</th>
                             <th scope="col">Organiser</th>
                             <th scope="col">Talk</th>
                         </tr>
                     </thead>
                     <tbody>
 						<tr>
+							<th scope="row">Hamburg, DE</th>
+							<td>17th of August 2016</td>
+							<td><a href="http://roledrinks.de">Website</a></td>
+							<td><a href="https://twitter.com/lassediercks">Lasse Diercks</a></td>
+							<td>3 to 5 talks</td>
+						</tr>
+						<tr>
 							<th scope="row">Amsterdam, NL</th>
 							<td>18th of June 2016</td>
+							<td></td>
 							<td>Job, Eva, and Michiel</td>
 							<td>We had 7(!) talks varying from space adventures to vacation selfies</td>
 						</tr>
@@ -114,10 +116,12 @@
 							<td>15th of April 2016</td>
 							<td></td>
 							<td></td>
+							<td></td>
 						</tr>
 						<tr>
 							<th scope="row">Dieren, NL</th>
 							<td>19th of February 2016</td>
+							<td></td>
 							<td></td>
 							<td></td>
 						</tr>
