--- a/index.html
+++ b/index.html
@@ -41,18 +41,11 @@
                     </thead>
                     <tbody>
 						<tr>
-							<th scope="row">Amsterdam, NL</th>
-							<td>8th of October 2016</td>
-							<td><a href="http://roledrinks.nl">Website</a></td>
-							<td>Job, Eva, and Michiel</td>
-							<td>4 to 5 talks</td>
-						</tr>
-						<tr>
 							<th scope="row">Brighton, UK</th>
-							<td>2016</td>
-							<td></td>
-							<td>TBA</td>
-							<td>TBA</td>
+							<td>12th of November 2016</td>
+							<td><a href="http://roledrinks.uk">Website</a></td>
+							<td>Michiel and Henny</td>
+							<td>2 talks</td>
 						</tr>
 						<tr>
 							<th scope="row">Edinburgh, UK</th>
@@ -91,12 +84,19 @@
                         <tr>
                             <th scope="col">Location</th>
                             <th scope="col">Date</th>
-							<th scope="cole">Website</th>
+                            <th scope="cole">Website</th>
                             <th scope="col">Organiser</th>
                             <th scope="col">Talk</th>
                         </tr>
                     </thead>
                     <tbody>
+                      <tr>
+                        <th scope="row">Amsterdam, NL</th>
+                        <td>8th of October 2016</td>
+                        <td><a href="http://roledrinks.nl">Website</a></td>
+                        <td>Job, Eva, and Michiel</td>
+                        <td>6 talks</td>
+                      </tr>
 						<tr>
 							<th scope="row">Hamburg, DE</th>
 							<td>17th of August 2016</td>
