Update Utrecht page

--- a/in/utrecht/index.html
+++ b/in/utrecht/index.html
@@ -165,6 +165,16 @@
           </ul>
         </div>
       </section>
+
+      <section id="drunken-selfies">
+        <div class="✨">
+          <h2>Photos</h2>
+          <p>No photos survived this one, but we do have a video 💖</p>
+          <div class="🎬">
+            <iframe src="https://www.youtube.com/embed/NLBuDeyVXDQ" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
