Add Amsterdam event

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </li>
 
             <li>
-              <a href="/in/hamburg">
+              <a href="http://roledrinks.de">
                 <img src="images/cities/Hamburg.jpg" alt="">
                 <div>
                   <span>Hamburg, DE</span>
