--- a/in/dieren/index.html
+++ b/in/dieren/index.html
@@ -139,6 +139,15 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/Nathanja_vM">
+                <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_4_400x400.png" alt="">
+                <div>
+                  <span>Nathanja van Marsbergen</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/TimLuig">
                 <img src="https://pbs.twimg.com/profile_images/744479057698504704/wgt2RHwK_400x400.jpg" alt="">
                 <div>
