Add June 2017 event in Amsterdam

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Accessibility Meetup: role=drinks</title>
+    <title>Accessibility Meetup: role=drinks | June 17, 2017, Amsterdam</title>
     <link rel="stylesheet" href="/drinks.css">
 
     <!-- <meta name="twitter:card" content="summary_large_image">
@@ -39,10 +39,6 @@
       </div>
     </header>
 
-    <div class="ℹ️">
-      <p>We don’t yet have the details for this event; <a href="https://twitter.com/roledrinks">we post updates on Twitter</a>.</p>
-    </div>
-
     <nav aria-label="Page">
       <ul>
         <li>
@@ -77,7 +73,7 @@
         <div class="✨">
           <h2>Details</h2>
           <p>
-            <strong>So when is it?</strong> Sometime in 2017 👌🏾.<br>
+            <strong>So when is it?</strong> Saturday June 17th, 2017 👌🏾.<br>
             <strong>Cool 🙌🏼 When does it end?</strong> 18:00, there usually is some sort of after-party though.<br>
             <strong>Where is it 🤔?</strong> Amsterdam 🍻<br>
             <strong>Costs?</strong> We will cover the venue, some snacks, and your first two drinks 👍🏿.
