Add first attendees

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -102,7 +102,37 @@
           <h2>Attendees</h2>
           <p>If you want to yak about accessibility, sign up!</p>
 
-          <p>No attendees yet.</p>
+          <ul class="👥">
+            <li>
+              <a href="https://twitter.com/detonite">
+                <img src="https://pbs.twimg.com/profile_images/697089148512051200/Jz8uwmO8_400x400.png" alt="">
+                <div>
+                  <span>Job van Achterberg</span>
+                  <i>3ode</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/MichielBijl">
+                <img src="https://pbs.twimg.com/profile_images/788360032702398464/zLavFXlw_400x400.jpg" alt="">
+                <div>
+                  <span>Michiel Bijl</span>
+                  <i><abbr title="The Paciello Group">TPG</abbr></i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/vasilis">
+                <img src="https://pbs.twimg.com/profile_images/180609810/work-kills_400x400.jpg" alt="">
+                <div>
+                  <span>Vasilis van Gemert</span>
+                  <i>University of Applied Science, Amsterdam</i>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
