--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -104,6 +104,16 @@
 
           <ul class="👥">
             <li>
+              <a href="https://twitter.com/iamhiwelo">
+                <img src="https://pbs.twimg.com/profile_images/811884623324127233/6_Hb0l_9_400x400.jpg" alt="">
+                <div>
+                  <span>Damien</span>
+                  <i>raccoon.studio</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/697089148512051200/Jz8uwmO8_400x400.png" alt="">
                 <div>
