Add CSS Day as sponsor

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -157,9 +157,10 @@
       <section id="thank-you">
         <div class="✨">
           <h2>Who paid for all of this?</h2>
-          <p>We blackmailed some people into paying for your drink:</p>
+          <p>These people have been kind enough to help us run role=drinks:</p>
           <ul class="💰">
             <li><a href="https://fronteers.nl"><img src="/images/sponsors/fronteers.svg" alt="Fronteers"></a></li>
+            <li><a href="https://cssday.nl"><img src="/images/sponsors/cssday.png" alt="CSS Day"></a></li>
           </ul>
         </div>
       </section>
