Fix header copy

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -30,7 +30,7 @@
           <p>
             What on Earth is a role=drinks?
             It’s an accessibility meetup!
-            The event features lightning talks by accessibility specialist, time to talk to the speakers and fellow attendees, and more than enough time to grab a drink.
+            The event features lightning talks, time to talk to the speakers and fellow attendees, and more than enough time to grab a drink.
           </p>
         </div>
         <svg viewBox="0 0 120 120" class="♿️" aria-label="role=drinks logo">
