Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -105,7 +105,58 @@
           <h2>Attendees</h2>
           <p>If you want to yak about accessibility, sign up!</p>
 
-          <p>No attendees yet.</p>
+          <ul class="👥">
+            <li>
+              <a href="https://twitter.com/daconspray">
+                <img src="https://pbs.twimg.com/profile_images/477401350435643393/oKspwots_400x400.jpeg" alt="">
+                <div>
+                  <span>Dennis Deacon</span>
+                  <i>dennisdeacon.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/ryanleisinger">
+                <img src="https://pbs.twimg.com/profile_images/2257734259/profile_400x400.jpg" alt="">
+                <div>
+                  <span>Ryan Leisinger</span>
+                  <i>ryanleisinger.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/ewaccess">
+                <img src="https://pbs.twimg.com/profile_images/778344831294857216/u2wDd383_400x400.jpg" alt="">
+                <div>
+                  <span>Eric Wright</span>
+                  <i>disabledathletics.org</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/sinabahram">
+                <img src="https://pbs.twimg.com/profile_images/1610156081/sina1x1_400x400.jpg" alt="">
+                <div>
+                  <span>Sina Bahram</span>
+                  <i>sinabahram.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/detonite">
+                <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
+                <div>
+                  <span>Job van Achterberg</span>
+                  <i>3ode.nl</i>
+                </div>
+              </a>
+            </li>
+
+          </ul>
         </div>
       </section>
 
