Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -147,6 +147,26 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/thebillygregory">
+                <img src="https://pbs.twimg.com/profile_images/804416128655171584/l-o9lFpg_400x400.jpg" alt="">
+                <div>
+                  <span>Billy Gregory</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/karlgroves">
+                <img src="https://pbs.twimg.com/profile_images/818560198260490241/QiWC2n7H_400x400.jpg" alt="">
+                <div>
+                  <span>Karl Groves</span>
+                  <i>karlgroves.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
