Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -167,6 +167,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/rgcarrjr">
+                <img src="https://pbs.twimg.com/profile_images/3060337407/0e25498ffb5e6e805d7ea8ff3da88163_400x400.jpeg" alt="">
+                <div>
+                  <span>Rob Carr</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
