Fix avatar Krijn

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -144,7 +144,7 @@
 
             <li>
               <a href="https://twitter.com/krijnhoetmer">
-                <img src="/images/attendees/Krijn.jpg" alt="">
+                <img src="/images/attendees/Krijn.png" alt="">
                 <div>
                   <span>Krijn Hoetmer</span>
                 </div>
