Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -177,6 +177,36 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/starla175">
+                <img src="https://pbs.twimg.com/profile_images/756327367627317248/Ug2S4q01_400x400.jpg" alt="">
+                <div>
+                  <span>Beth Raduenzel</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <span>
+                <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_400x400.png" alt="">
+                <div>
+                  <span>Tanseela Molani</span>
+                  <i>United Airlines</i>
+                </div>
+              </span>
+            </li>
+
+            <li>
+              <span>
+                <img src="https://pbs.twimg.com/profile_images/811375729971642368/NEL80rOV_400x400.jpg" alt="">
+                <div>
+                  <span>Jason Kiss</span>
+                  <i>accessibleculture.org</i>
+                </div>
+              </span>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
