Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -187,23 +187,23 @@
             </li>
 
             <li>
-              <span>
-                <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_1_400x400.png" alt="">
+              <a href="https://www.linkedin.com/in/tanseela-molani-99a8271">
+                <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/1/000/0f7/038/3e74f12.jpg" alt="">
                 <div>
                   <span>Tanseela Molani</span>
                   <i>United Airlines</i>
                 </div>
-              </span>
+              </a>
             </li>
 
             <li>
-              <span>
+              <a href="https://twitter.com/jkiss">
                 <img src="https://pbs.twimg.com/profile_images/811375729971642368/NEL80rOV_400x400.jpg" alt="">
                 <div>
                   <span>Jason Kiss</span>
                   <i>accessibleculture.org</i>
                 </div>
-              </span>
+              </a>
             </li>
 
             <li>
