Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -207,6 +207,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/stevefaulkner">
+                <img src="https://pbs.twimg.com/profile_images/804225140548632577/7S6Z05bM.jpg" alt="">
+                <div>
+                  <span>Steve Faulkner</span>
+                  <i>The Paciello Group</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
