Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -217,6 +217,36 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/stommepoes">
+                <img src="https://pbs.twimg.com/profile_images/826763266802192385/fYPCYBQH_400x400.jpg" alt="">
+                <div>
+                  <span>Mallory</span>
+                  <i>Pearson</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/marcysutton">
+                <img src="https://pbs.twimg.com/profile_images/777935762117435396/d0pg6zZh_400x400.jpg" alt="">
+                <div>
+                  <span>Marcy Sutton</span>
+                  <i>Deque</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/EmmaJ_PR">
+                <img src="https://pbs.twimg.com/profile_images/616264576028512256/EC6ok4tM_400x400.jpg" alt="">
+                <div>
+                  <span>Emma Pratt Richens</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
