Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -247,6 +247,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/aardrian">
+                <img src="https://pbs.twimg.com/profile_images/477441054895919104/OB69-tiw_400x400.jpeg" alt="">
+                <div>
+                  <span>Adrian Roselli</span>
+                  <i>adrianroselli.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
