Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -257,6 +257,26 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/NataliePatriceT">
+                <img src="https://pbs.twimg.com/profile_images/664838456573587456/tZNIRDjm_400x400.jpg" alt="">
+                <div>
+                  <span>Natalie Patrice Tucker</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/eeleesuh ">
+                <img src="https://pbs.twimg.com/profile_images/459899308129525760/mWg4Z1uD_400x400.png" alt="">
+                <div>
+                  <span>Elisa</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
