Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -277,6 +277,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/yatil">
+                <img src="https://pbs.twimg.com/profile_images/806454987362537472/DWFwlx3j_400x400.jpg" alt="">
+                <div>
+                  <span>Eric Eggert</span>
+                  <i>yatil.net</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
