CSUN special location details

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -77,10 +77,10 @@
         <div class="✨">
           <h2>Details</h2>
           <p>
-            <strong>So when is it?</strong> The evening of March 1st, 2017; after the first day of CSUN 👌🏾.<br>
+            <strong>So when is it?</strong> The evening of March 1st, 2017; after the first day of CSUN. 6pm to 11pm 👌🏾.<br>
             <strong>Cool 🙌🏼 When does it end?</strong> When we're out of things to say.<br>
-            <strong>Where is it 🤔?</strong> San Diego, CA. Exact location to be decided. 🍻<br>
-            <strong>Costs?</strong> To be decided. Likely "Bring Your Own", unless we find some sponsors. 👍🏿.
+            <strong>Where is it 🤔?</strong> <a href="http://missionbrewery.com/">Mission Brewery</a> 🍻<br>
+            <strong>Costs?</strong> There'll be a tip jar. Sponsors very welcome 👍🏿.
           </p>
 
           <p>
