Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -287,6 +287,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/SteveBuell">
+                <img src="https://pbs.twimg.com/profile_images/478917384300810240/n0hQXLZN_400x400.jpeg" alt="">
+                <div>
+                  <span>Steve Buell</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
                 <div>
