Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -297,8 +297,88 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/sharrush">
+                <img src="https://pbs.twimg.com/profile_images/559757951762591745/I5m4ivJb_400x400.jpeg" alt="">
+                <div>
+                  <span>Sharron Rush</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/JohnKMcNabb">
+                <img src="https://pbs.twimg.com/profile_images/553965311364325376/jqQkLFQJ_400x400.jpeg" alt="">
+                <div>
+                  <span>John McNabb</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/shlugi">
+                <img src="https://pbs.twimg.com/profile_images/3252590989/16eb22988697c65b30c9294bda469071_400x400.jpeg" alt="">
+                <div>
+                  <span>TJ Schlouski</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/rob_dodson">
+                <img src="https://pbs.twimg.com/profile_images/378800000232696683/736a167223708fbbb2e910da863541cc_400x400.jpeg" alt="">
+                <div>
+                  <span>Rob Dodson \ʕ•ᴥ•ʔ/</span>
+                  <i>robdodson.me</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/sundress">
+                <img src="https://pbs.twimg.com/profile_images/871277789/alice_400x400.jpg" alt="">
+                <div>
+                  <span>Alice Boxhall</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/JakeAbma">
+                <img src="https://pbs.twimg.com/profile_images/1558180615/jake_400x400.jpg" alt="">
+                <div>
+                  <span>Jake Abma</span>
+                  <i>ING</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/GarethFW">
+                <img src="https://pbs.twimg.com/profile_images/761505196786716672/SRRiHj2I_400x400.jpg" alt="">
+                <div>
+                  <span>Gareth Ford Williams</span>
+                  <i>BBC</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/deanBirkett">
+                <img src="https://pbs.twimg.com/profile_images/477351227865305088/QeF-TAJe_400x400.png" alt="">
+                <div>
+                  <span>Dean Birkett</span>
+                  <i>AssistiveWare</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
-                <img src="https://pbs.twimg.com/profile_images/804273735897333760/rtBinWFv_400x400.jpg" alt="">
+                <img src="https://www.linkedin.com/start/view-full-profile?_ed=0_UXzbllAIWZZ-Z4fFT3PeVTlAhOWjw0kkLTo0nMUEpfEodj0AQafj30-F_t0gnwEl&trk=public_profile_tc-view" alt="">
                 <div>
                   <span>Job van Achterberg</span>
                   <i>3ode.nl</i>
