Modified cost section

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -401,7 +401,7 @@
       <section id="thank-you">
         <div class="✨">
           <h2>Who's paying for all this?</h2>
-          <p>We're yet going Dutch. Want to sponsor? <a href="mailto:job@roledrinks.com">We'd love to hear it!</a></p>
+          <p>Want to sponsor? <a href="mailto:job@roledrinks.com">We'd love to hear it!</a></p>
 <!--           <ul class="💰">
           </ul> -->
         </div>
