--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -378,7 +378,7 @@
 
             <li>
               <a href="https://twitter.com/detonite">
-                <img src="https://www.linkedin.com/start/view-full-profile?_ed=0_UXzbllAIWZZ-Z4fFT3PeVTlAhOWjw0kkLTo0nMUEpfEodj0AQafj30-F_t0gnwEl&trk=public_profile_tc-view" alt="">
+                <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
                   <span>Job van Achterberg</span>
                   <i>3ode.nl</i>
