Added CSUN special speakers

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -96,7 +96,31 @@
         <div class="✨">
           <h2>Speakers</h2>
           <p>If you’re interested in giving a talk <a href="mailto:job@roledrinks.com">let us know</a>!</p>
-          <p>No speakers have been announced yet.</p>
+          <p>We've got some speakers lined up!</p>
+
+          <ul class="👥 📢">
+            <li>
+              <a href="https://twitter.com/VandLShow">
+                <img src="https://pbs.twimg.com/profile_images/494195515337101312/ate3f2bX_400x400.png" alt="">
+                <div>
+                  <span>The Viking and the Lumberjack</span>
+                </div>
+              </a>
+              <p>Title to be announced.</p>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/yatil">
+                <img src="https://pbs.twimg.com/profile_images/806454987362537472/DWFwlx3j_400x400.jpg" alt="">
+                <div>
+                  <span>Eric Eggert</span>
+                </div>
+              </a>
+              <p>Title to be announced.</p>
+            </li>
+
+          </ul>
+
         </div>
       </section>
 
