Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -401,6 +401,26 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/SteveALee">
+                <img src="https://pbs.twimg.com/profile_images/1417383991/AIbEiAIAAABDCIPfoOHSsKCLMCILdmNhcmRfcGhvdG8qKDZmYWM1MjViZDBhNzE2MjY1MzI0MTBjNGRlNWNmY2JhMDU5MGQyMTcwAXPG430QRsPDsDuksXb2F6pLVWwa_400x400.jpg" alt="">
+                <div>
+                  <span>SteveALee</span>
+                  <i>opendirective.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/LFLegal">
+                <img src="https://pbs.twimg.com/profile_images/758711330027085826/4hQap_kM_400x400.jpg" alt="">
+                <div>
+                  <span>Lainey Feingold</span>
+                  <i>lflegal.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
