Added CSUN special speakers

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -119,6 +119,16 @@
               <p>Title to be announced.</p>
             </li>
 
+            <li>
+              <a href="https://twitter.com/SteveALee">
+                <img src="https://pbs.twimg.com/profile_images/1417383991/AIbEiAIAAABDCIPfoOHSsKCLMCILdmNhcmRfcGhvdG8qKDZmYWM1MjViZDBhNzE2MjY1MzI0MTBjNGRlNWNmY2JhMDU5MGQyMTcwAXPG430QRsPDsDuksXb2F6pLVWwa_400x400.jpg" alt="">
+                <div>
+                  <span>SteveALee</span>
+                </div>
+              </a>
+              <p>Cognitive Accessibility</p>
+            </li>
+
           </ul>
 
         </div>
