Updated Eric Eggert's talk titke

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -116,7 +116,7 @@
                   <span>Eric Eggert</span>
                 </div>
               </a>
-              <p>Title to be announced.</p>
+              <p>ARIA Serious?!</p>
             </li>
 
             <li>
