--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -431,6 +431,17 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/dboudreau">
+                <img src="https://pbs.twimg.com/profile_images/804693549304414208/5eXLrKIL.jpg" alt="">
+                <div>
+                  <span>Denis Boudreau</span>
+                  <i>denisboudreau.org</i>
+                </div>
+              </a>
+            </li>
+
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
