Added CSUN attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -481,6 +481,35 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/LeonieWatson">
+                <img src="https://pbs.twimg.com/profile_images/1701895352/tink-twitter-avatar_400x400.png" alt="">
+                <div>
+                  <span>Léonie Watson</span>
+                  <i>tink.uk</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/dive4cb">
+                <img src="https://pbs.twimg.com/profile_images/708676017737506816/kie8XKAp.jpg" alt="">
+                <div>
+                  <span>CB Averitt</span>
+                  <i>Deque</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/jnurthen">
+                <img src="https://pbs.twimg.com/profile_images/509732046726389760/iv17Lwyp_400x400.png" alt="">
+                <div>
+                  <span>James Nurthen</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
