--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -509,6 +509,17 @@
                 </div>
               </a>
             </li>
+
+            <li>
+              <a href="https://twitter.com/jfc3">
+                <img src="https://pbs.twimg.com/profile_images/489043137587720192/euHi6qTr_400x400.jpeg" alt="">
+                <div>
+                  <span>John F. Croston<sup>3</sup></span>
+                  <i>jfciii.com</i>
+                </div>
+              </a>
+            </li>
+
             <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
