Added CSUN attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -521,6 +521,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/dylanbarrell">
+                <img src="https://pbs.twimg.com/profile_images/511213967230783488/ikxOUYfS.jpeg" alt="">
+                <div>
+                  <span>Dylan 'holistica11y' Barrell</span>
+                  <i>unobfuscated.blogspot.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
