Added San Diego special speakers

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -531,6 +531,26 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/jeffkline2">
+                <img src="https://pbs.twimg.com/profile_images/1609656543/jeff_pic_for_web_400x400.jpg" alt="">
+                <div>
+                  <span>Jeff Kline</span>
+                  <i>strategicaccessiblity.com</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/krishnajariwala">
+                <img src="https://abs.twimg.com/sticky/default_profile_images/default_profile_6_400x400.png" alt="">
+                <div>
+                  <span>Krishna</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
