--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -531,6 +531,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/charupandhi">
+                <img src="https://pbs.twimg.com/profile_images/577555243203883010/yAI2vobY_400x400.jpeg" alt="">
+                <div>
+                  <span>Charu Pandhi</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
