--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -541,6 +541,17 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/UsableWorld">
+                <img src="https://pbs.twimg.com/profile_images/827960771602558976/xrKSKuAU_400x400.jpg" alt="">
+                <div>
+                  <span>Michael</span>
+                  <i>IBM</i>
+                </div>
+              </a>
+            </li>
+
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
