Added San Diego special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -544,7 +544,7 @@
               <a href="https://twitter.com/UsableWorld">
                 <img src="https://pbs.twimg.com/profile_images/827960771602558976/xrKSKuAU_400x400.jpg" alt="">
                 <div>
-                  <span>Michael</span>
+                  <span>Michael Gower</span>
                   <i>IBM</i>
                 </div>
               </a>
