Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -550,6 +550,15 @@
               </a>
             </li>
 
+            <li>
+              <a href="https://twitter.com/MarcJohlic">
+                <img src="https://pbs.twimg.com/profile_images/470331527/IMG_0066-crop_400x400.jpg" alt="">
+                <div>
+                  <span>Marc Johlic</span>
+                  <i>IBM</i>
+                </div>
+              </a>
+            </li>
 
             <li>
               <a href="https://twitter.com/detonite">
