Added CSUN special attendees

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -551,6 +551,26 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/cyns">
+                <img src="https://pbs.twimg.com/profile_images/446085442677399552/paHJQwJs_400x400.jpeg" alt="">
+                <div>
+                  <span>Cynthia Shelly (+4)</span>
+                  <i>Starbucks☕️</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/naterkane">
+                <img src="https://pbs.twimg.com/profile_images/663748003354828800/V5EivUbJ_400x400.jpg" alt="">
+                <div>
+                  <span>Nater Kane</span>
+                  <i>Tenon.io</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/MarcJohlic">
                 <img src="https://pbs.twimg.com/profile_images/470331527/IMG_0066-crop_400x400.jpg" alt="">
                 <div>
