Added sponsor, speaker, attendees for CSUN special

--- a/in/san_diego/index.html
+++ b/in/san_diego/index.html
@@ -129,6 +129,16 @@
               <p>Cognitive Accessibility</p>
             </li>
 
+            <li>
+              <a href="https://twitter.com/aardrian">
+                <img src="https://pbs.twimg.com/profile_images/477441054895919104/OB69-tiw_400x400.jpeg" alt="">
+                <div>
+                  <span>Adrian Roselli</span>
+                </div>
+              </a>
+              <p>Mind Your lang</p>
+            </li>
+
           </ul>
 
         </div>
@@ -581,6 +591,26 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/LaurieMerryman">
+                <img src="https://pbs.twimg.com/profile_images/378800000112848916/d40970bf61c4b2c2c6a63d8a0f8245a9_400x400.png" alt="">
+                <div>
+                  <span>Laurie Merryman</span>
+                  <!-- <i></i> -->
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/ErichManser">
+                <img src="https://pbs.twimg.com/profile_images/611535752199942144/kttwg7ql_400x400.jpg" alt="">
+                <div>
+                  <span>Erich Manser</span>
+                  <i>IBM</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/detonite">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/04e/1b3/2c5e49c.jpg" alt="">
                 <div>
@@ -605,9 +635,17 @@
       <section id="thank-you">
         <div class="✨">
           <h2>Who's paying for all this?</h2>
+          <p>These companies are awesome enough to sponsor this event:</p>
+          <ul class="💰">
+            <li>
+              <a href="http://adrianroselli.com">
+                <img src="/images/sponsors/roselli.png" alt="Roselli LLC">
+              </a>
+              <p>Roselli LLC.</p>
+            </li>
+          </ul>
+          <hr>
           <p>Want to sponsor? <a href="mailto:job@roledrinks.com">We'd love to hear it!</a></p>
-<!--           <ul class="💰">
-          </ul> -->
         </div>
       </section>
     </main>
